UnifiedPDF: Rebaseline pdf-in-embed tests https://bugs.webkit.org/show_bug.cgi?id=284810 rdar://141611395
Reviewed by Simon Fraser.

Layer tree structure changed when UnifiedPDF was enabled. Rebaseline
the layer tree structure to trunk version.

The tests should use registerPDFTest, otherwise they just show nothing.

* LayoutTests/pdf/pdf-in-embed-expected.txt:
* LayoutTests/pdf/pdf-in-embed.html:
* LayoutTests/pdf/pdf-in-styled-embed-expected.txt:
* LayoutTests/pdf/pdf-in-styled-embed.html:
* LayoutTests/platform/mac-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/287995@main

--- a/LayoutTests/pdf/pdf-in-embed.html
+++ b/LayoutTests/pdf/pdf-in-embed.html
@@ -1,30 +1,25 @@
-<!DOCTYPE html> <!-- webkit-test-runner [ UnifiedPDFEnabled=true ] -->
+<!DOCTYPE html> <!-- webkit-test-runner [ UnifiedPDFEnabled=true PDFPluginHUDEnabled=false ] -->
 <html>
 <head>
-    <style>
-        embed {
-            width: 300px;
-            height: 300px;
-        }
-    </style>
-    <script src="../resources/ui-helper.js"></script>
-    <script>
-        if (window.testRunner) {
-            testRunner.waitUntilDone();
-            testRunner.dumpAsText();
-        }
-        window.addEventListener('load', async () => {
-            await UIHelper.waitForPDFFadeIn();
-
-            const layers = document.getElementById('layers');
-            layers.textContent = internals.layerTreeAsText(document);
-
-            testRunner.notifyDone();
-        }, false);
-    </script>
+<style>
+embed {
+    width: 300px;
+    height: 300px;
+}
+</style>
+<script src="../resources/ui-helper.js"></script>
 </head>
 <body>
-    <embed src="../fast/images/resources/green_rectangle.pdf">
+<embed id="plugin" src="../fast/images/resources/green_rectangle.pdf"></embed>
 <pre id="layers"></pre>
+<script>
+testRunner?.waitUntilDone();
+testRunner?.dumpAsText();
+internals?.registerPDFTest(async () => {
+    await UIHelper.waitForPDFFadeIn();
+    layers.textContent = internals.layerTreeAsText(document);
+    testRunner?.notifyDone();
+}, plugin);
+</script>
 </body>
 </html>
