--- a/LayoutTests/pdf/pdf-in-embed-with-root-page-zoom.html
+++ b/LayoutTests/pdf/pdf-in-embed-with-root-page-zoom.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html> <!-- webkit-test-runner [ UnifiedPDFEnabled=true PDFPluginHUDEnabled=false ] -->
 <html>
 <head>
-    <style>
-        embed {
-            width: 600px;
-            height: 600px;
-            border: 1px solid red;
-        }
-    </style>
-    <script src="../resources/ui-helper.js"></script>
-    <script>
-        if (window.testRunner) {
-            testRunner.waitUntilDone();
-            testRunner.dumpAsText();
-        }
-        window.addEventListener('load', async () => {
-            await UIHelper.zoomToScale(1.3);
-            await UIHelper.waitForPDFFadeIn();
-            const layers = document.getElementById('layers');
-            layers.textContent = internals.layerTreeAsText(document, internals.LAYER_TREE_INCLUDES_VISIBLE_RECTS);
-            testRunner.notifyDone();
-        }, false);
-    </script>
+<style>
+embed {
+    width: 600px;
+    height: 600px;
+    border: 1px solid red;
+}
+</style>
+<script src="../resources/ui-helper.js"></script>
 </head>
 <body>
-    <embed src="../resources/image.pdf">
+<embed id="plugin" src="../resources/image.pdf"></embed>
 <pre id="layers"></pre>
+<script>
+testRunner?.waitUntilDone();
+testRunner?.dumpAsText();
+internals?.registerPDFTest(async () => {
+    await UIHelper.zoomToScale(1.3);
+    await UIHelper.waitForPDFFadeIn();
+    layers.textContent = internals.layerTreeAsText(document, internals.LAYER_TREE_INCLUDES_VISIBLE_RECTS);
+    testRunner?.notifyDone();
+}, plugin);
+</script>
 </body>
 </html>
