--- a/LayoutTests/pdf/pdf-in-styled-embed.html
+++ b/LayoutTests/pdf/pdf-in-styled-embed.html
@@ -1,34 +1,29 @@
 <!DOCTYPE html> <!-- webkit-test-runner [ UnifiedPDFEnabled=true PDFPluginHUDEnabled=false ] -->
 <html>
 <head>
-    <style>
-        embed {
-            margin: 200px;
-            width: 300px;
-            height: 300px;
-            border: 20px solid silver;
-            padding: 20px;
-            box-shadow: 0 0 20px black;
-        }
-    </style>
-    <script src="../resources/ui-helper.js"></script>
-    <script>
-        if (window.testRunner) {
-            testRunner.waitUntilDone();
-            testRunner.dumpAsText();
-        }
-        window.addEventListener('load', async () => {
-            await UIHelper.waitForPDFFadeIn();
-
-            const layers = document.getElementById('layers');
-            layers.textContent = internals.layerTreeAsText(document);
-
-            testRunner.notifyDone();
-        }, false);
-    </script>
+<style>
+embed {
+    margin: 200px;
+    width: 300px;
+    height: 300px;
+    border: 20px solid silver;
+    padding: 20px;
+    box-shadow: 0 0 20px black;
+}
+</style>
+<script src="../resources/ui-helper.js"></script>
 </head>
 <body>
-    <embed src="../fast/images/resources/green_rectangle.pdf">
+<embed id="plugin" src="../fast/images/resources/green_rectangle.pdf"></embed>
 <pre id="layers"></pre>
+<script>
+testRunner?.waitUntilDone();
+testRunner?.dumpAsText();
+internals?.registerPDFTest(async () => {
+    await UIHelper.waitForPDFFadeIn();
+    layers.textContent = internals.layerTreeAsText(document);
+    testRunner?.notifyDone();
+}, plugin);
+</script>
 </body>
 </html>
