--- a/LayoutTests/overlay-region/fixed-node-updates.html
+++ b/LayoutTests/overlay-region/fixed-node-updates.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- webkit-test-runner [ AsyncOverflowScrollingEnabled=true AsyncFrameScrollingEnabled=true ] -->
+<!DOCTYPE html> <!-- webkit-test-runner [ OverlayRegionsEnabled=true AsyncOverflowScrollingEnabled=true AsyncFrameScrollingEnabled=true ] -->
 <html>
 <head>
     <meta charset="utf-8" />
