[Gardening]: [Sequoia] svg/stroke/non-scaling-stroke-gradient-text.html is a constant image failure https://bugs.webkit.org/show_bug.cgi?id=281939 rdar://138441678
Unreviewed test gardening

* LayoutTests/platform/mac-wk2/TestExpectations: Remove expectation.
* LayoutTests/svg/stroke/non-scaling-stroke-gradient-text.html: Losen ImageDiff tolerance.

Canonical link: https://commits.webkit.org/288039@main

--- a/LayoutTests/svg/stroke/non-scaling-stroke-gradient-text.html
+++ b/LayoutTests/svg/stroke/non-scaling-stroke-gradient-text.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="fuzzy" content="maxDifference=2; totalPixels=1939" />
+<meta name="fuzzy" content="maxDifference=0-2; totalPixels=0-1939" />
 </head>
 <body>
 <svg>
