getDisplayMedia video track should have non persistent deviceIds https://bugs.webkit.org/show_bug.cgi?id=284952 rdar://141754036
Reviewed by Eric Carlson.

As per latest meeting and spec change, deviceId persistency should be per document, and not per origin.
Marking screen share capture device as ephemeral to do so.
Also make sure to have capabilities filled properly for deviceId.

* LayoutTests/fast/mediastream/get-display-media-settings.html:
* LayoutTests/http/wpt/mediastream/getDisplayMedia-deviceid-persistency-expected.txt: Added.
* LayoutTests/http/wpt/mediastream/getDisplayMedia-deviceid-persistency.html: Added.
* Source/WebCore/platform/mediastream/CaptureDevice.h:
(WebCore::CaptureDevice::isScreenShareType):
(WebCore::CaptureDevice::CaptureDevice):
* Source/WebCore/platform/mediastream/cocoa/DisplayCaptureSourceCocoa.cpp:
(WebCore::DisplayCaptureSourceCocoa::capabilities):
* Source/WebCore/platform/mediastream/gstreamer/MockDisplayCaptureSourceGStreamer.cpp:
(WebCore::MockDisplayCaptureSourceGStreamer::capabilities):
* Source/WebCore/platform/mock/MockRealtimeVideoSource.cpp:
(WebCore::MockRealtimeVideoSource::capabilities):

Canonical link: https://commits.webkit.org/288112@main

--- a/LayoutTests/fast/mediastream/get-display-media-settings.html
+++ b/LayoutTests/fast/mediastream/get-display-media-settings.html
@@ -8,19 +8,19 @@
         <script src="resources/getDisplayMedia-utils.js"></script>
     </head>
     <body>
-
         <script>
             promise_test(async () => {
                 stream = await callGetDisplayMedia({ video: true });
                 const settings = stream.getVideoTracks()[0].getSettings();
+                const capabilities = stream.getVideoTracks()[0].getCapabilities();
 
                 assert_equals(settings.height, 1080);
                 assert_equals(settings.width, 1920);
                 assert_equals(settings.frameRate, 30);
                 assert_true(typeof settings.deviceId === 'string', true);
-
+                assert_true(typeof capabilities.deviceId === 'string', true);
+                assert_equals(capabilities.deviceId, settings.deviceId);
             }, "check settings");
-
         </script>
     </body>
 </html>
