AX: Add support for handling AXFontColorChangeSearchKey and AXStyleChangeSearchKey off the main-thread https://bugs.webkit.org/show_bug.cgi?id=284970 rdar://141774908
Reviewed by Chris Fleizach.

We can compute AXFontColorChangeSearchKey and AXStyleChangeSearchKey using the information we added to serve attributed
strings off the main-thread, so this commit does so, and adds a new test proving we behave correctly.

* LayoutTests/accessibility/ax-thread-text-apis/non-collapsed-selection-insertion-point-line-number.html:
Fix incorrect comment saying this test was a copy of an existing one.
* LayoutTests/accessibility/ax-thread-text-apis/search-predicate-style-change-expected.txt: Added.
* LayoutTests/accessibility/ax-thread-text-apis/search-predicate-style-change.html: Added.
* Source/WebCore/accessibility/AXCoreObject.h:
* Source/WebCore/accessibility/AccessibilityObject.h:
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::hasSameFontColor):
(WebCore::AccessibilityRenderObject::hasSameStyle):
(WebCore::AccessibilityRenderObject::hasSameFontColor const): Deleted.
(WebCore::AccessibilityRenderObject::hasSameStyle const): Deleted.
* Source/WebCore/accessibility/AccessibilityRenderObject.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::hasSameFontColor):
(WebCore::AXIsolatedObject::hasSameStyle):
(WebCore::AXIsolatedObject::hasSameFontColor const): Deleted.
(WebCore::AXIsolatedObject::hasSameStyle const): Deleted.
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:

Canonical link: https://commits.webkit.org/288129@main

--- a/LayoutTests/accessibility/ax-thread-text-apis/non-collapsed-selection-insertion-point-line-number.html
+++ b/LayoutTests/accessibility/ax-thread-text-apis/non-collapsed-selection-insertion-point-line-number.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML><!-- webkit-test-runner [ runSingly=true AccessibilityThreadTextApisEnabled=true ] -->
-<!-- Copy of existing test. Remove after accessibilityThreadTextApisEnabled is enabled by default. -->
+<!-- New test added as part of the AccessibilityThreadTextApisEnabled effort. Move to LayoutTests/accessibility/mac after the feature is enabled by default. -->
 <html>
 <head>
 <script src="../../resources/accessibility-helper.js"></script>
