Import CSP report-hash and reporting tests https://bugs.webkit.org/show_bug.cgi?id=284811
Reviewed by Ryan Reno.

This PR imports the report-hash tests, as well as the reporting tests
that they rely on.
It currently marks these tests as timing out, as the feature is not yet
implemented.

Upstream commit: https://github.com/web-platform-tests/wpt/commit/b9ff3b3521376a66d4765bd2765928c549d3df09

* LayoutTests/TestExpectations: Mark the report-hash tests as timing
  out.
* LayoutTests/imported/w3c/web-platform-tests/content-security-policy/report-hash/default-src.https.window-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/content-security-policy/report-hash/default-src.https.window.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/content-security-policy/report-hash/default-src.https.window.js: Added.
* LayoutTests/imported/w3c/web-platform-tests/content-security-policy/report-hash/default-src.https.window.js.sub.headers: Added.
* LayoutTests/imported/w3c/web-platform-tests/content-security-policy/report-hash/multiple-policies.https.sub-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/content-security-policy/report-hash/multiple-policies.https.sub.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/content-security-policy/report-hash/multiple-policies.https.sub.html.sub.headers: Added.
* LayoutTests/imported/w3c/web-platform-tests/content-security-policy/report-hash/reportonly-default-src.https.window-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/content-security-policy/report-hash/reportonly-default-src.https.window.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/content-security-policy/report-hash/reportonly-default-src.https.window.js: Added.
* LayoutTests/imported/w3c/web-platform-tests/content-security-policy/report-hash/reportonly-default-src.https.window.js.sub.headers: Added.
* LayoutTests/imported/w3c/web-platform-tests/content-security-policy/report-hash/reportonly-script-sr

--- a/LayoutTests/imported/w3c/web-platform-tests/reporting/reporting-api-honors-limits.https.sub.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/reporting/reporting-api-honors-limits.https.sub.html
@@ -13,7 +13,7 @@
     var t1 = async_test("Test that image does not load");
 
     promise_test(async function() {
-      for (let i = 0; i != 110; ++i)
+      for (let i = 0; i < 110; ++i)
         await test_driver.generate_test_report("" + i);
     }, "Buffer filled");
 
@@ -45,8 +45,8 @@
       });
 
       assert_equals(testReports.length, 100);
- 
-      for (let i = 0; i != 100; ++i) {
+
+      for (let i = 0; i < 100; ++i) {
         assert_equals(testReports[i].type, "test");
         assert_equals(testReports[i].body.message, "" + (i + 10));
       }
@@ -57,8 +57,10 @@
           let observer = new ReportingObserver(resolve, {buffered:true});
           observer.observe();
       });
-              
-      assert_equals(allReports.length, 102);
+
+      // WebKit generates two CSP reports for the blocked image load (https://bugs.webkit.org/show_bug.cgi?id=153162)
+      // Other browsers produce only one.
+      assert_true(allReports.length >= 101 && allReports.length <= 102);
     }, "Combined report limits were honored");
   </script>
   <img src='/reporting/support/fail.png'
