AX: Stop unnecessarily exposing AXResolvedEditingStyles on macOS as it's not used by anything https://bugs.webkit.org/show_bug.cgi?id=284974 rdar://141780735
Reviewed by Chris Fleizach.

The handling of this attribute was added for https://bugs.webkit.org/show_bug.cgi?id=215129 / rdar://65114972,
intending to help fix a bug on iOS. Support for serving this attribute was also added for macOS, but never made use
of by any macOS Apple assistive technology nor any open-source one that I can find, so let's stop exposing it. This
should make accessibilityAttributeValue a bit faster, and more importantly make it clear that we don't have to move
resolvedEditingStyles() off the main-thread for now.

* Source/WebCore/accessibility/AXCoreObject.h:
* Source/WebCore/accessibility/AccessibilityObject.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::resolvedEditingStyles const): Deleted.
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:
* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperBase.mm:
(-[WebAccessibilityObjectWrapperBase baseAccessibilityResolvedEditingStyles]):
* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):

Canonical link: https://commits.webkit.org/288164@main

--- a/LayoutTests/accessibility/ios-simulator/resolved-text-editing.html
+++ b/LayoutTests/accessibility/ios-simulator/resolved-text-editing.html
@@ -5,28 +5,24 @@
 </head>
 <body>
 
-<div contenteditable id=div></div>
+<div contenteditable id="contenteditable"></div>
 
 <script>
 let output = "This tests that we can retrieve resolved editing styles from the editable text area.\n\n";
 
 if (window.accessibilityController) {
-    window.jsTestIsAsync = true;
-
-    var div = document.getElementById("div");
-    div.focus();
+    document.getElementById("contenteditable").focus();
 
     textInputController.insertText("a");
     document.execCommand("italic", false)
     document.execCommand("FontSize", false, 6)
 
-    var axDiv = accessibilityController.accessibleElementById("div");
-    axDiv.attributeValueAsync("AXResolvedEditingStyles", function(value) {
-        output += value;
+    output += accessibilityController
+        .accessibleElementById("contenteditable")
+        .stringDescriptionOfAttributeValue("AXResolvedEditingStyles");
 
-        debug(output);
-        finishJSTest();
-    });
+    debug(output);
+    finishJSTest();
 }
 </script>
 </body>
