AX: AXPropertyName::IsGrabbed is not updated when non-aria-grabbed drags happen https://bugs.webkit.org/show_bug.cgi?id=285070 rdar://141880722
Reviewed by Chris Fleizach.

With this commit, we now AXPropertyName::IsGrabbed when drags happen via pointing device or JavaScript.

AccessibilityUIElement::ariaIsGrabbed is renamed to isGrabbed, as this state is not ARIA-only.

* LayoutTests/accessibility/gtk/aria-drag-and-drop-expected.txt:
* LayoutTests/accessibility/gtk/aria-drag-and-drop.html:
* LayoutTests/accessibility/mac/aria-drag-drop-expected.txt:
* LayoutTests/accessibility/mac/aria-drag-drop.html:
* LayoutTests/accessibility/mac/dynamic-drag-expected.txt: Added.
* LayoutTests/accessibility/mac/dynamic-drag.html: Added.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::onDragElementChanged):
* Source/WebCore/accessibility/AXObjectCache.h:
* Source/WebCore/page/EventHandler.cpp:
(WebCore::EventHandler::handleMousePressEvent):
(WebCore::EventHandler::setDragStateSource const):
(WebCore::EventHandler::dragSourceEndedAt):
(WebCore::EventHandler::updateDragStateAfterEditDragIfNeeded):
(WebCore::EventHandler::handleDrag):
* Source/WebCore/page/EventHandler.h:
* Tools/DumpRenderTree/AccessibilityUIElement.cpp:
(getIsGrabbedCallback):
(AccessibilityUIElement::getJSClass):
(getARIAIsGrabbedCallback): Deleted.
* Tools/DumpRenderTree/AccessibilityUIElement.h:
* Tools/DumpRenderTree/ios/AccessibilityUIElementIOS.mm:
(AccessibilityUIElement::isGrabbed const):
(AccessibilityUIElement::ariaIsGrabbed const): Deleted.
* Tools/DumpRenderTree/mac/AccessibilityUIElementMac.mm:
(AccessibilityUIElement::isGrabbed const):
(AccessibilityUIElement::ariaIsGrabbed const): Deleted.
* Tools/WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h:
* Tools/WebKitTestRunner/InjectedBundle/Bindings/AccessibilityUIElement.idl:
* Tools/WebKitTestRunner/InjectedBundle/atspi/AccessibilityUIElementAtspi.cpp:
(WTR::AccessibilityUIElement::isGrabbed const):
(WTR::Accessibilit

--- a/LayoutTests/accessibility/gtk/aria-drag-and-drop.html
+++ b/LayoutTests/accessibility/gtk/aria-drag-and-drop.html
@@ -33,7 +33,7 @@
         for (var i = 1; i <= 8; i++) {
             var axElement = accessibilityController.accessibleElementById("test" + i);
             debug("test" + i + "\n\tariaDropEffects: " + axElement.ariaDropEffects +
-			       "\n\tariaIsGrabbed: " + axElement.ariaIsGrabbed +
+			       "\n\tisGrabbed: " + axElement.isGrabbed +
 			       "\n\thas grabbed attribute: " + hasGrabbedAttribute(axElement));
         }
 
