`-[WKWebView _setUseSystemAppearance:]` should be backed by a UnifiedWebPreference https://bugs.webkit.org/show_bug.cgi?id=285108 rdar://141954151
Reviewed by Abrar Rahman Protyasha.

UnifiedWebPreferences have been the way to implement settings for quite a while
now. `Page::useSystemAppearance` is effectively a setting, but it is backed by a
lot of custom code, including state in both the UI process and Web process, as
well as `WebPageCreationParameters`.

Refactor code to use a UnifiedWebPreference to implement
`-[WKWebView _setUseSystemAppearance:]`.

* LayoutTests/fast/css/mac/focus-ring-color-should-not-expose-accent-color-expected-mismatch.html:

Use the test option header to set the new setting. "runSingly" is no longer needed
since the mismatch in options will ensure a new webview is created.

* LayoutTests/fast/css/mac/focus-ring-color-should-not-expose-accent-color.html:
* LayoutTests/fast/media/use-system-appearance-user-stylesheet-parsing-expected.txt: Removed.
* LayoutTests/fast/media/use-system-appearance-user-stylesheet-parsing.html: Removed.

Rewrite this test as an API test. The Internals hook to set `UseSystemAppearance` is
removed in favor of end-to-end testing via an API test.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/css/parser/CSSParserContext.cpp:
* Source/WebCore/css/query/MediaQueryFeatures.cpp:
(WebCore::MQ::Features::prefersDarkInterfaceFeatureSchema):
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::useDarkAppearance const):
(WebCore::Document::styleColorOptions const):
(WebCore::Document::useSystemAppearance const): Deleted.
* Source/WebCore/dom/Document.h:
* Source/WebCore/page/Page.cpp:
(WebCore::Page::useSystemAppearanceChanged):

Preserve hook to be called when the setting changes.

(WebCore::Page::setUseSystemAppearance): Deleted.
* Source/WebCore/page/Page.h:
(WebCore::Page::useSystemAppearance const): Deleted.
* Source/WebCore/page/SettingsBase.cpp:
(WebCore::SettingsBase::useSystemAppear

--- a/LayoutTests/fast/css/mac/focus-ring-color-should-not-expose-accent-color.html
+++ b/LayoutTests/fast/css/mac/focus-ring-color-should-not-expose-accent-color.html
@@ -1,4 +1,4 @@
-<html> <!-- webkit-test-runner [ runSingly=true ] -->
+<html>
 <head>
 <script src="../../../resources/ui-helper.js"></script>
 <style>
@@ -31,7 +31,6 @@ if (window.testRunner) {
     testRunner.waitUntilDone();
     (async function() {
         await UIHelper.setAppAccentColor(230, 110, 2);
-        internals.setUseSystemAppearance(false);
         runTest();
         testRunner.notifyDone();
     })();
