--- a/LayoutTests/fast/css/mac/focus-ring-color-should-not-expose-accent-color-expected-mismatch.html
+++ b/LayoutTests/fast/css/mac/focus-ring-color-should-not-expose-accent-color-expected-mismatch.html
@@ -1,4 +1,4 @@
-<html> <!-- webkit-test-runner [ runSingly=true ] -->
+<html><!-- webkit-test-runner [ UseSystemAppearance=true ] -->
 <head>
 <script src="../../../resources/ui-helper.js"></script>
 <style>
@@ -31,7 +31,6 @@ if (window.testRunner) {
     testRunner.waitUntilDone();
     (async function() {
         await UIHelper.setAppAccentColor(230, 110, 2);
-        internals.setUseSystemAppearance(true);
         runTest();
         testRunner.notifyDone();
     })();
