--- a/LayoutTests/imported/w3c/web-platform-tests/svg/extensibility/foreignObject/compositing-backface-visibility.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/svg/extensibility/foreignObject/compositing-backface-visibility.html
@@ -4,7 +4,7 @@
 <link rel="match" href="compositing-backface-visibility-ref.html">
 <link rel="help" href="https://svgwg.org/svg2-draft/single-page.html#embedded-ForeignObjectElement"/>
 <style>
-  * { -webkit-backface-visibility: hidden }
+  * { backface-visibility: hidden }
 </style>
 <svg>
   <foreignObject>
