AX: Remove unnecessary AXProperty::SelectedChildren https://bugs.webkit.org/show_bug.cgi?id=285153 rdar://142037291
Reviewed by Chris Fleizach.

We can compute this property on-demand with information we have already cached off the main-thread. This change allows
us to do less up-front work when creating each object, and guarantees this property can never get stale (because it doesn't exist).
We also need to do less work when keeping the tree up-to-date (e.g. we no longer need to handle AXSelectedChildrenChanged in updateIsolatedTree).

* LayoutTests/accessibility/combobox/combobox-active-element-selected-children-expected.txt:
* LayoutTests/accessibility/combobox/combobox-active-element-selected-children.html:
* LayoutTests/accessibility/combobox/mac/aria-combobox-activedescendant-expected.txt:
* LayoutTests/accessibility/combobox/mac/aria-combobox-activedescendant.html:
* LayoutTests/accessibility/list/list-active-element-selected-children-expected.txt:
* LayoutTests/accessibility/list/list-active-element-selected-children.html:
* LayoutTests/accessibility/list/listbox-active-element-selected-children-expected.txt:
* LayoutTests/accessibility/list/listbox-active-element-selected-children.html:
* LayoutTests/resources/accessibility-helper.js:
* Source/WebCore/accessibility/AXCoreObject.cpp:
(WebCore::AXCoreObject::canHaveSelectedChildren const):
(WebCore::AXCoreObject::selectedChildren):
(WebCore::AXCoreObject::ariaListboxSelectedChildren):
(WebCore::AXCoreObject::ariaSelectedRows):
(WebCore::AXCoreObject::selectedListItems):
(WebCore::AXCoreObject::isActiveDescendantOfFocusedContainer const):
* Source/WebCore/accessibility/AXCoreObject.h:
* Source/WebCore/accessibility/AXLogger.cpp:
(WebCore::operator<<):
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::updateIsolatedTree):
* Source/WebCore/accessibility/AccessibilityListBox.cpp:
(WebCore::AccessibilityListBox::selectedChildren): Deleted.
* Source/WebCore/accessibility/AccessibilityListBo

--- a/LayoutTests/accessibility/combobox/combobox-active-element-selected-children.html
+++ b/LayoutTests/accessibility/combobox/combobox-active-element-selected-children.html
@@ -32,10 +32,16 @@ if (window.accessibilityController) {
     var activeElementChangeCount = 0;
     var selectedChildrenChangeCount = 0;
     accessibilityController.addNotificationListener((target, notification) => {
-        if (notification == "AXActiveElementChanged" || notification == "AXSelectedChildrenChanged") {
+        if (notification === "AXActiveElementChanged") {
             output += `notification: ${notification}\n`;
-            logActiveElementAndSelectedChildren(axCombobox);
-            notification == "AXActiveElementChanged" ? ++activeElementChangeCount : ++selectedChildrenChangeCount;
+            output += `    activeElement: ${axCombobox.activeElement.domIdentifier}\n`;
+            ++activeElementChangeCount;
+        }
+
+        if (notification == "AXSelectedChildrenChanged") {
+            output += `notification: ${notification}\n`;
+            outputSelectedChildren(axCombobox);
+            ++selectedChildrenChangeCount;
         }
     });
 
