Sync `css/css-lists` from WPT upstream
https://bugs.webkit.org/show_bug.cgi?id=285233
rdar://142154400

Reviewed by Tim Nguyen.

Upstream commit: https://github.com/web-platform-tests/wpt/commit/8fcb1f1e9519117f68699b8257c6b79d0f6e70e8

The main motivation for this sync is to remove local `counter` CSS2.1 tests, which
were updated to be reftests and updated into this directory. Past this, I will remove
those local copies of those tests and make `WPT` as de-facto source.

NOTE: We do have some unsynced changes in WPT tests, which needs to be synced upstream.

* LayoutTests/mported/w3c/resources/resource-files.json:
* LayoutTests/mported/w3c/web-platform-tests/css/css-lists/counter-reset-increment-overflow-underflow.html:
* LayoutTests/mported/w3c/web-platform-tests/css/css-lists/crashtests/w3c-import.log:
* LayoutTests/mported/w3c/web-platform-tests/css/css-lists/parsing/w3c-import.log:
* LayoutTests/mported/w3c/web-platform-tests/css/css-lists/w3c-import.log:
* LayoutTests/mported/w3c/web-platform-tests/css/css-lists/pseudo-element-remove-update-expected.html:
* LayoutTests/mported/w3c/web-platform-tests/css/css-lists/pseudo-element-remove-update-ref.html:
* LayoutTests/mported/w3c/web-platform-tests/css/css-lists/pseudo-element-remove-update.html:
* LayoutTests/mported/w3c/web-platform-tests/css/css-lists/style-containment-counter-crash.html:
* LayoutTests/mported/w3c/web-platform-tests/css/css-lists/WEB_FEATURES.yml:
* LayoutTests/mported/w3c/web-platform-tests/css/css-lists/nested-marker-styling.html:
* LayoutTests/mported/w3c/web-platform-tests/css/css-lists/nested-marker-styling-ref.html:
* LayoutTests/mported/w3c/web-platform-tests/css/css-lists/nested-marker-styling-expected.html:
* LayoutTests/mported/w3c/web-platform-tests/css/css-lists/list-item-counter-crash.html:
* LayoutTests/mported/w3c/web-platform-tests/css/css-lists/li-without-ul-counter-crash.html:
* LayoutTests/mported/w3c/web-platform-tests/css/css-lists/li-value-counter-reset-002.html:
* LayoutT

--- a/LayoutTests/imported/w3c/web-platform-tests/css/css-lists/counter-reset-increment-overflow-underflow.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/css/css-lists/counter-reset-increment-overflow-underflow.html
@@ -14,7 +14,7 @@
 }
 
 .underflow {
-  counter-reset: under-counter -2000000000
+  counter-reset: under-counter -2000000000;
 }
 .underflow h3:before {
   counter-increment: under-counter -50000000;
