.measureText() returns TextMetrics object with rounded values for bounding box https://bugs.webkit.org/show_bug.cgi?id=240213
Reviewed by Said Abou-Hallawa.

Stop rounding intermediate calculations to integer values, potentially ending up with float values for TextMetrics bounding box.

Note that iOS/glib platforms seem to always round ascent/descent to integer values so have some different test results. Stopping the rounding
there would lead to a big amount of needed rebaselines, so it is left out of this PR.

* LayoutTests/fast/canvas/canvas-measureText-2-expected.txt:
* LayoutTests/fast/canvas/canvas-measureText-2.html:
* LayoutTests/imported/w3c/web-platform-tests/html/canvas/element/text/2d.text.measure.baselines-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/canvas/offscreen/text/2d.text.measure.baselines-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/canvas/offscreen/text/2d.text.measure.baselines.worker-expected.txt:
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/html/canvas/element/text/2d.text.measure.baselines-expected.txt: Copied from LayoutTests/imported/w3c/web-platform-tests/html/canvas/element/text/2d.text.measure.baselines-expected.txt.
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/html/canvas/offscreen/text/2d.text.measure.baselines-expected.txt: Copied from LayoutTests/imported/w3c/web-platform-tests/html/canvas/offscreen/text/2d.text.measure.baselines-expected.txt.
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/html/canvas/offscreen/text/2d.text.measure.baselines.worker-expected.txt: Copied from LayoutTests/imported/w3c/web-platform-tests/html/canvas/offscreen/text/2d.text.measure.baselines.worker-expected.txt.
* LayoutTests/platform/ios/imported/w3c/web-platform-tests/html/canvas/element/text/2d.text.measure.baselines-expected.txt: Copied from LayoutTests/imported/w3c/web-platform-tests/html/canvas/element/text/2d.text.measure.baselines-expected.txt.
* LayoutTests/platfo

--- a/LayoutTests/fast/canvas/canvas-measureText-2.html
+++ b/LayoutTests/fast/canvas/canvas-measureText-2.html
@@ -33,15 +33,15 @@
                             shouldBeGreaterThanOrEqual("metrics.emHeightAscent + metrics.emHeightDescent", "0");
 
                             if (baseline === 'top')
-                                shouldBeZero("Math.abs(metrics.emHeightAscent)");
+                                shouldBeCloseTo("Math.abs(metrics.emHeightAscent)", 0, 0.25);
                             if (baseline === 'bottom')
-                                shouldBeZero("Math.abs(metrics.emHeightDescent)");
+                                shouldBeCloseTo("Math.abs(metrics.emHeightDescent)", 0, 0.25);
                             if (baseline === 'hanging')
-                                shouldBeZero("Math.abs(metrics.hangingBaseline)");
+                                shouldBeCloseTo("Math.abs(metrics.hangingBaseline)", 0, 0.25);
                             if (baseline === 'alphabetic')
-                                shouldBeZero("Math.abs(metrics.alphabeticBaseline)");
+                                shouldBeCloseTo("Math.abs(metrics.alphabeticBaseline)", 0, 0.25);
                             if (baseline === 'ideographic')
-                                shouldBeZero("Math.abs(metrics.ideographicBaseline)");
+                                shouldBeCloseTo("Math.abs(metrics.ideographicBaseline)", 0, 0.25);
 
                             shouldBeGreaterThanOrEqual("metrics.emHeightAscent", "metrics.hangingBaseline");
                             shouldBeGreaterThanOrEqual("metrics.hangingBaseline", "metrics.alphabeticBaseline");
