Assertion when using non-absolute / non-font-relative units in ctx.letterSpacing/ctx.wordSpacing https://bugs.webkit.org/show_bug.cgi?id=285404
Reviewed by Darin Adler.

Fixes a debug only assertion when setting ctx.letterSpacing/ctx.wordSpacing
to non-absolute / non-font-relative units in the length passed in.

* LayoutTests/fast/canvas/canvas-letterSpacing-wordSpacing-units-expected.txt: Added.
* LayoutTests/fast/canvas/canvas-letterSpacing-wordSpacing-units.html: Added.
    - Adds test that setting letterSpacing / wordSpacing doesn't crash for any unit.

* Source/WebCore/html/canvas/CanvasRenderingContext2DBase.cpp:
(WebCore::unitAllowedForSpacing):
(WebCore::CanvasRenderingContext2DBase::setLetterSpacing):
(WebCore::CanvasRenderingContext2DBase::setWordSpacing):
    - Add check for supported units.

Canonical link: https://commits.webkit.org/288468@main

--- a/LayoutTests/imported/w3c/web-platform-tests/html/canvas/element/text/2d.text.drawing.style.invalid.spacing.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/html/canvas/element/text/2d.text.drawing.style.invalid.spacing.html
@@ -28,6 +28,7 @@ _addTest(function(canvas, ctx) {
     _assertSame(ctx.wordSpacing, '0px', "ctx.wordSpacing", "'0px'");
     _assertSame(ctx.letterSpacing, '0px', "ctx.letterSpacing", "'0px'");
   }
+  test_word_spacing('1lh')
   test_word_spacing('0s');
   test_word_spacing('1min');
   test_word_spacing('1deg');
