HTML audio element currentTime property too high when setting srcObject to MediaStream (macOS and iOS) https://bugs.webkit.org/show_bug.cgi?id=285391 rdar://142465970
Reviewed by Jean-Yves Avenard.

We were not initializing m_startTime to an invalid value since MediaPlayerPrivateMediaStreamAVFObjC::play is checking for whether it is valid or not.
We initialize m_startTime to an invalid value so that it can be correctly initialized in MediaPlayerPrivateMediaStreamAVFObjC::play.

Covered by updated test.

* LayoutTests/fast/mediastream/media-element-current-time.html:
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::MediaPlayerPrivateMediaStreamAVFObjC):
* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::MediaPlayerPrivateGStreamer):

Canonical link: https://commits.webkit.org/288519@main

--- a/LayoutTests/fast/mediastream/media-element-current-time.html
+++ b/LayoutTests/fast/mediastream/media-element-current-time.html
@@ -16,6 +16,8 @@ promise_test(async() => {
     let currentTime = video.currentTime;
     assert_not_equals(currentTime, 0, "Playback has started, currentTime must not be zero");
 
+    assert_less_than(currentTime, 3, "currentTime should be small initially");
+
     await waitForVideoFrame(video);
     await waitForVideoFrame(video);
     assert_greater_than(video.currentTime, currentTime, "video is playing, time should advance");
