--- a/LayoutTests/overlay-region/big-edge-overlay-horizontal.html
+++ b/LayoutTests/overlay-region/big-edge-overlay-horizontal.html
@@ -9,10 +9,10 @@
 
         .fixed-overlay {
             position: fixed;
-            top: 10px;
-            left: 10px;
-            right: 10px;
-            bottom: 10px;
+            top: 0;
+            left: 0;
+            right: 30%;
+            bottom: 0;
             display: flex;
             justify-content: center;
             align-items: center;
