Web Inspector: support `DOMRect` in `console.screenshot` https://bugs.webkit.org/show_bug.cgi?id=284423
Reviewed by Tim Nguyen.

This will allow developers to customize what part of the page is captured instead of more coarse options like a `Node` or the entire `document`.

* Source/WebCore/page/PageConsoleClient.cpp:
(WebCore::PageConsoleClient::screenshot):

* LayoutTests/inspector/console/console-screenshot.html:
* LayoutTests/inspector/console/console-screenshot-expected.txt:

Canonical link: https://commits.webkit.org/288544@main

--- a/LayoutTests/inspector/console/console-screenshot.html
+++ b/LayoutTests/inspector/console/console-screenshot.html
@@ -163,6 +163,22 @@ function test()
     });
 
     addTest({
+        name: "console.screenshot.DOMRect",
+        expression: `console.screenshot(document.querySelector("#testNode").getBoundingClientRect())`,
+    });
+
+    addTest({
+        name: "console.screenshot.DOMRectReadOnly",
+        expression: `console.screenshot(DOMRectReadOnly.fromRect(document.querySelector("#testNode").getBoundingClientRect()))`,
+    });
+
+    addTest({
+        name: "console.screenshot.DOMRectInit",
+        expression: `console.screenshot({x: 0, y: 0, width: 2, height: 2})`,
+        shouldCaptureViewport: true,
+    });
+
+    addTest({
         name: "console.screenshot.String.Valid",
         expression: `console.screenshot("test")`,
         shouldCaptureViewport: true,
