`document.execCommand("copy")` only triggers if there is a selection https://bugs.webkit.org/show_bug.cgi?id=156529 rdar://27792460
Reviewed by Ryosuke Niwa.

Take the focused element as clipboard event target if context is not editable as specification mentions:
https://www.w3.org/TR/clipboard-apis/#fire-a-clipboard-event

To avoid regressing hire.apple.com when landing bug 284630, we also need to unconditionally allow copying from uneditable elements.

* LayoutTests/editing/execCommand/enabling-and-selection-2-expected.txt:
* LayoutTests/editing/execCommand/enabling-and-selection-2.html:
* LayoutTests/editing/execCommand/enabling-and-selection-expected.txt:
* LayoutTests/editing/execCommand/enabling-and-selection.html:
* LayoutTests/editing/pasteboard/copy-text-from-uneditable-element-expected.txt: Added.
* LayoutTests/editing/pasteboard/copy-text-from-uneditable-element.html: Added.
* LayoutTests/editing/pasteboard/gtk/middle-click-onpaste-expected.txt:
* LayoutTests/editing/pasteboard/gtk/middle-click-onpaste.html:
* LayoutTests/imported/w3c/web-platform-tests/editing/other/exec-command-without-editable-element.tentative-expected.txt:
* LayoutTests/platform/gtk/imported/w3c/web-platform-tests/editing/other/exec-command-without-editable-element.tentative-expected.txt:
* LayoutTests/platform/wpe/imported/w3c/web-platform-tests/editing/other/exec-command-without-editable-element.tentative-expected.txt:
* Source/WebCore/editing/Editor.cpp:
(WebCore::Editor::canCopy const):
(WebCore::Editor::findEventTargetFromSelection const):
* Tools/TestWebKitAPI/Tests/WebKitGtk/TestWebViewEditor.cpp:
(testWebViewEditorCutCopyPasteNonEditable):

Canonical link: https://commits.webkit.org/288559@main

--- a/LayoutTests/editing/execCommand/enabling-and-selection.html
+++ b/LayoutTests/editing/execCommand/enabling-and-selection.html
@@ -59,6 +59,9 @@ function whenEnabled(command)
     if (summaryInteger === 0x7F)
         return "always";
 
+    if (summaryInteger === 0x75)
+        return "always except editable caret";
+
     if (summaryInteger === 0x54)
         return "range";
 
@@ -88,7 +91,7 @@ shouldBe("whenEnabled('SelectAll')", "'always'");
 
 shouldBe("whenEnabled('Transpose')", "'caret'");
 
-shouldBe("whenEnabled('Copy')", "'range'");
+shouldBe("whenEnabled('Copy')", "'always except editable caret'");
 
 shouldBe("whenEnabled('Cut')", "'editable range'");
 shouldBe("whenEnabled('RemoveFormat')", "'editable range'");
