[Gardening]: REGRESSION(285929@main...285932@main):[MacOS Debug WK1] fast/editing/recursive-reapply-edit-command-crash.html is a constant failure (Flaky in EWS) https://bugs.webkit.org/show_bug.cgi?id=285538 rdar://142486345
Reviewed by Charlie Wolfe.

Updated expectation and rebaselined the test.

* LayoutTests/fast/editing/recursive-reapply-edit-command-crash-expected.txt:
* LayoutTests/fast/editing/recursive-reapply-edit-command-crash.html:
* LayoutTests/platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/288564@main

--- a/LayoutTests/fast/editing/recursive-reapply-edit-command-crash.html
+++ b/LayoutTests/fast/editing/recursive-reapply-edit-command-crash.html
@@ -1,3 +1,4 @@
+<!-- webkit-test-runner [ dumpJSConsoleLogInStdErr=true ] -->
 <body onload="x21.addEventListener('DOMNodeInserted', f4); x21.text='A'; document.execCommand('undo');">
 <script>
 if (window.testRunner)
