Safari moves focus to first focusable element inside an element with role="dialog" and aria-modal="true" when added to the DOM https://bugs.webkit.org/show_bug.cgi?id=236585 rdar://88897436
Reviewed by Chris Fleizach.

We behaved this way because https://w3c.github.io/aria/#aria-modal says:

> When a modal element is displayed, assistive technologies SHOULD navigate to the element unless focus has explicitly been set elsewhere.

Note that it says "assistive technologies", which likely moreso referred to VoiceOver and others.

Regardless of who is doing the focusing, this behavior has proven problematic in several ways:

 1. We are the only browser who does this, causing difficulty for web developers.
 2. This behavior is kind of contrary to developer documentation, e.g. MDN, which states that users of aria-modal
    must manage focus themselves.
 3. Most importantly, this behavior means we autofocus into any aria-modal, including ones that are poorly authored
    (e.g. have no close button). This has caused lots of user pain that greatly overshadows the user benefit for
    valid users of aria-modal (who should be managing focus themselves anyways).

With this commit, we remove WebKit's autofocus-into-aria-modal behavior. Dialog elements will continue autofocus.

This commit also fixes a bug where a modal would be invalidated if focus was on the aria-modal element and not a descendant.

* LayoutTests/accessibility/aria-modal-in-aria-hidden.html:
* LayoutTests/accessibility/aria-modal-multiple-dialogs.html:
* LayoutTests/accessibility/aria-modal-text-descendants.html:
* LayoutTests/accessibility/aria-modal.html:
* LayoutTests/accessibility/custom-elements/modal.html:
* LayoutTests/accessibility/ignore-modals-without-any-content-expected.txt:
* LayoutTests/accessibility/ignore-modals-without-any-content.html:
* LayoutTests/accessibility/mac/aria-modal-auto-focus-expected.txt: Removed.
* LayoutTests/accessibility/mac/aria-modal-auto-focus.html: Removed.
* LayoutTests/a

--- a/LayoutTests/accessibility/aria-modal-in-aria-hidden.html
+++ b/LayoutTests/accessibility/aria-modal-in-aria-hidden.html
@@ -12,7 +12,7 @@
 
 <div id="container">
     <div role="dialog" aria-modal="false" id="box">
-        <h3 id="myDialog">Just an example.</h3>
+        <h3 id="heading" tabindex="0">Just an example.</h3>
     </div>
 </div>
 
@@ -23,6 +23,7 @@ if (window.accessibilityController) {
     window.jsTestIsAsync = true;
     output += expect("accessibilityController.accessibleElementById('bgContent').isIgnored", "false")
 
+    document.getElementById("heading").focus();
     document.getElementById("box").setAttribute("aria-modal", "true");
     setTimeout(async function() {
         output += await expectAsync("!accessibilityController.accessibleElementById('bgContent')", "true");
