Re-import Trusted Types WPTs https://bugs.webkit.org/show_bug.cgi?id=285907
Reviewed by Tim Nguyen.

Upstream commit: https://github.com/web-platform-tests/wpt/commit/55af820

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/content-security-policy/securitypolicyviolation/source-file-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/content-security-policy/securitypolicyviolation/source-file.html:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/DOMWindowTimers-setTimeout-setInterval-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/DOMWindowTimers-setTimeout-setInterval.html:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/Element-setAttribute-setAttributeNS-sinks.tentative-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/Element-setAttribute-setAttributeNS-sinks.tentative.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/GlobalEventHandlers-onclick-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/GlobalEventHandlers-onclick.html:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/HTMLElement-generic-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/HTMLElement-generic.html:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/ServiceWorkerContainer-register-from-Worker.https-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/ServiceWorkerContainer-register-from-Worker.https.html: Copied from LayoutTests/imported/w3c/web-platform-tests/trusted-types/WorkerGlobalScope-importScripts.html.
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/TrustedTypePolicyFactory-getAttributeType-event-handler-content-attributes.tentative.html:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/WorkerGlobalScope-eval.html:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/WorkerGlobalScope-importScripts-expected.txt:
* Layou

--- a/LayoutTests/imported/w3c/web-platform-tests/content-security-policy/securitypolicyviolation/source-file.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/content-security-policy/securitypolicyviolation/source-file.html
@@ -1,3 +1,4 @@
+<!-- webkit-test-runner [ jscOptions=--useTrustedTypes=true ] -->
 <meta http-equiv="Content-Security-Policy" content="require-trusted-types-for 'script';" />
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
