REGRESSION(270688@main): Text is not displayed if it is formatted with OpenType-SVG color fonts https://bugs.webkit.org/show_bug.cgi?id=285935# rdar://137496217
Reviewed by Simon Fraser.

drawDisplayListItems() was added to GraphicsContext and its subclasses in 270688@main
to transfer a DisplayList in one IPC to GPUProcess. It turned out this is problematic
when RenderingResources are referenced from the items.

We do not transfer local ImageBuffers to GPUProcess and DisplayList::Recorder should
fail to record these items.  It is supposed to fall back to GraphicsContext which
transfers the local ImageBuffers to ShareableBitmaps before calling the corresponding
NativeImage functions.

The problem is this does not happen with individual items in
DisplayList::Recorder::drawDisplayListItems(). We keep them referencing ImageBuffers
although RemoteDisplayListRecorderProxy::recordResourceUse() fails to record the local
ImageBuffers.

The fix is to revert 270688@main. Reverting this change should not have an effect on
MotionMark - Design sub-test. All the text runs in this sub-tests have only one
DrawDecomposedGlyphs item which references a Font resource. So replaying back this
item in WebProcess and sending it to GPUP individually should be the same as transferring
the one-item list and replaying it back in GPUProcess.

The layout test fast/text/otsvg-spacing.html was repurposed to test OpenType-SVG fonts
in DOM elements so we can test drawing trough TextPainter. otsvg-spacing-canvas.html
was added to test OpenType-SVG fonts in 2D canvas.

* LayoutTests/fast/text/otsvg-spacing-canvas-expected.html: Added.
* LayoutTests/fast/text/otsvg-spacing-canvas.html: Added.
* LayoutTests/fast/text/otsvg-spacing-expected.html:
* LayoutTests/fast/text/otsvg-spacing.html:
* LayoutTests/fast/text/resources/glyph-image-1.png: Added.
* LayoutTests/fast/text/resources/glyph-image-2.png: Added.
* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/ios/TestExpectations:
* Layout

--- a/LayoutTests/fast/text/otsvg-spacing.html
+++ b/LayoutTests/fast/text/otsvg-spacing.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="fuzzy" content="maxDifference=0-64; totalPixels=0-16682" />
 <style>
-@font-face {
-    font-family: "WebFont";
-    src: url("resources/Ahem-SVG.ttf") format("truetype");
-}
+    @font-face {
+        font-family: "WebFont";
+        src: url("resources/Ahem-SVG.ttf") format("truetype");
+    }
+    .WebFont {
+        font-family: "WebFont" !important;
+        font-size: 100px;
+        margin-block-start: 0em;
+        margin-block-end: 0em;
+    }
 </style>
 </head>
 <body>
-<canvas id="canvas" width="800" height="800">
-<script>
-if (window.testRunner)
-    testRunner.waitUntilDone();
-var canvas = document.getElementById("canvas");
-var context = canvas.getContext("2d");
-document.fonts.load("100px 'WebFont'").then(function() {
-    context.font = "100px 'WebFont'";
-    context.fillText("aABCa", 100, 100);
-    context.fillRect(200, 20, 300, 100);
-    if (window.testRunner)
-        testRunner.notifyDone();
-});
-</script>
+    <h2>This tests drawing text with OpenType-SVG fonts.</h2>
+    <p class="WebFont">aABCa</p>
 </body>
 </html>
