--- a/LayoutTests/fast/text/otsvg-spacing-canvas-expected.html
+++ b/LayoutTests/fast/text/otsvg-spacing-canvas-expected.html
@@ -23,7 +23,7 @@
 </style>
 </head>
 <body>
-    <h2>This tests drawing text with OpenType-SVG fonts.</h2>
+    <h2>This tests drawing text with OpenType-SVG fonts in 2D canvas.</h2>
     <div class="container">
         <div class="black-box"></div>
         <div class="green-box"></div>
