REGRESSION (283213@main): [ macOS Debug ] fast/canvas/imageData-consistency.html is a consistent timeout https://bugs.webkit.org/show_bug.cgi?id=283203 rdar://140003573
Reviewed by Cameron McCormack.

Let's not print PASS on each pixel (~32K lines).

* LayoutTests/fast/canvas/imageData-consistency-expected.txt:
* LayoutTests/fast/canvas/imageData-consistency.html:
* LayoutTests/platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/289024@main

--- a/LayoutTests/fast/canvas/imageData-consistency.html
+++ b/LayoutTests/fast/canvas/imageData-consistency.html
@@ -34,7 +34,7 @@ function get() {
     shouldBe("actual.width", "getData.width");
     shouldBe("actual.height", "getData.height");
     for (let i = 0; i < actual.data.length; ++i)
-        shouldBe(`actual.data[${i}]`, `getData.data[${i}]`);
+        shouldBe(`actual.data[${i}]`, `getData.data[${i}]`, true);
 }
 
 function put() {
